--- a/packages/distributed-storage-ng/src/package.json
+++ b/packages/distributed-storage-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/distributed-storage-ng",
-  "version": "14.0.1",
+  "version": "15.0.0-rc1",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -36,22 +36,22 @@
     "@angular/core": "v15-lts",
     "@angular/forms": "v15-lts",
     "@angular/router": "v15-lts",
-    "@typexs/base-ng": ">=14.0.0",
+    "@typexs/base-ng": ">=15.0.0-rc1",
     "@typexs/distributed-storage": ">=3.0.0",
-    "@typexs/forms-ng": ">=14.0.0",
-    "@typexs/ng": ">=14.0.0",
-    "@typexs/storage-ng": ">=14.0.0"
+    "@typexs/forms-ng": ">=15.0.0-rc1",
+    "@typexs/ng": ">=15.0.0-rc1",
+    "@typexs/storage-ng": ">=15.0.0-rc1"
   },
   "dependencies": {
-    "@typexs/base-ng": "^14.0.1",
-    "@typexs/ng-theme-base": "^14.0.0"
+    "@typexs/base-ng": "^15.0.0-rc1",
+    "@typexs/ng-theme-base": "^15.0.0-rc1"
   },
   "devDependencies": {
     "@typexs/base": "^3.0.2",
-    "@typexs/base-ng": "^14.0.0",
+    "@typexs/base-ng": "^15.0.0-rc1",
     "@typexs/distributed-storage": "^3.0.2",
-    "@typexs/forms-ng": "^14.0.1",
-    "@typexs/ng": "^14.0.1"
+    "@typexs/forms-ng": "^15.0.0-rc1",
+    "@typexs/ng": "^15.0.0-rc1"
   },
   "publishConfig": {
     "tag": "v15-lts"
