--- a/packages/entity-ng/src/package.json
+++ b/packages/entity-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/entity-ng",
-  "version": "14.0.1",
+  "version": "15.0.0-rc1",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -37,23 +37,23 @@
     "@angular/forms": "v15-lts",
     "@angular/router": "v15-lts",
     "@typexs/base": ">=3.0.0",
-    "@typexs/base-ng": ">=14.0.0",
+    "@typexs/base-ng": ">=15.0.0-rc1",
     "@typexs/entity": ">=3.0.0",
     "@typexs/forms": ">=3.0.0",
-    "@typexs/forms-ng": ">=14.0.0",
-    "@typexs/ng": ">=14.0.0"
+    "@typexs/forms-ng": ">=15.0.0-rc1",
+    "@typexs/ng": ">=15.0.0-rc1"
   },
   "dependencies": {
-    "@typexs/base-ng": "^14.0.1",
-    "@typexs/ng-theme-base": "^14.0.0"
+    "@typexs/base-ng": "^15.0.0-rc1",
+    "@typexs/ng-theme-base": "^15.0.0-rc1"
   },
   "devDependencies": {
     "@typexs/base": "^3.0.2",
-    "@typexs/base-ng": "^14.0.0",
+    "@typexs/base-ng": "^15.0.0-rc1",
     "@typexs/entity": "^3.0.2",
     "@typexs/forms": "^3.0.2",
-    "@typexs/forms-ng": "^14.0.1",
-    "@typexs/ng": "^14.0.1"
+    "@typexs/forms-ng": "^15.0.0-rc1",
+    "@typexs/ng": "^15.0.0-rc1"
   },
   "publishConfig": {
     "tag": "v15-lts"
