--- a/packages/forms-ng/src/package.json
+++ b/packages/forms-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/forms-ng",
-  "version": "14.0.1",
+  "version": "15.0.0-rc1",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -36,12 +36,12 @@
     "@angular/core": "v15-lts",
     "@angular/forms": "v15-lts",
     "@angular/router": "v15-lts",
-    "@typexs/base-ng": ">=14.0.0",
+    "@typexs/base-ng": ">=15.0.0-rc1",
     "@typexs/forms": ">=3.0.0"
   },
   "devDependencies": {
     "@typexs/base": "^3.0.2",
-    "@typexs/base-ng": "^14.0.1",
+    "@typexs/base-ng": "^15.0.0-rc1",
     "@typexs/forms": "^3.0.2"
   },
   "publishConfig": {
