--- a/packages/app-auth/angular.json
+++ b/packages/app-auth/angular.json
@@ -80,10 +80,12 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
-            "karmaConfig": "./karma.conf.js",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "./tsconfig.spec.json",
+            "karmaConfig": "./karma.conf.js",
             "scripts": [],
             "styles": [
               "src/styles/styles.scss",
