--- a/packages/app/angular.json
+++ b/packages/app/angular.json
@@ -80,9 +80,11 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
             "karmaConfig": "./karma.conf.js",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "./tsconfig.spec.json",
             "scripts": [],
             "styles": [
