--- a/packages/auth-ng/tsconfig.spec.json
+++ b/packages/auth-ng/tsconfig.spec.json
@@ -2,18 +2,13 @@
 {
   "extends": "../../tsconfig.ng.spec",
   "compilerOptions": {
-    "outDir": "../../out-tsc/spec",
     "types": [
+      "node",
       "jasmine"
     ]
   },
-  "files": [
-    "src/test.ts",
-    "../ng/src/browser.ts",
-    "../base-ng/src/public_api.ts"
-  ],
   "include": [
-    "**/*.spec.ts",
-    "**/*.d.ts"
+    "src/**/*.spec.ts",
+    "src/**/*.d.ts"
   ]
 }
