--- a/packages/base-ng/angular.json
+++ b/packages/base-ng/angular.json
@@ -26,9 +26,13 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js"
+            "karmaConfig": "karma.config.js",
+            "inlineStyleLanguage": "scss"
           }
         }
       }
