--- a/packages/storage-ng/src/package.json
+++ b/packages/storage-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/storage-ng",
-  "version": "14.0.1",
+  "version": "15.0.0-rc1",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -33,10 +33,10 @@
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
     "@typexs/base": ">=3.0.0",
-    "@typexs/base-ng": ">=14.0.0",
+    "@typexs/base-ng": ">=15.0.0-rc1",
     "@typexs/forms": ">=3.0.0",
-    "@typexs/forms-ng": ">=14.0.0",
-    "@typexs/ng": ">=14.0.0",
+    "@typexs/forms-ng": ">=15.0.0-rc1",
+    "@typexs/ng": ">=15.0.0-rc1",
     "@typexs/storage": ">=3.0.0"
   },
   "devDependencies": {
@@ -45,10 +45,10 @@
     "@angular/forms": "v15-lts",
     "@angular/router": "v15-lts",
     "@typexs/base": "^3.0.2",
-    "@typexs/base-ng": "^14.0.1",
+    "@typexs/base-ng": "^15.0.0-rc1",
     "@typexs/forms": "^3.0.2",
-    "@typexs/forms-ng": "^14.0.1",
-    "@typexs/ng": "^14.0.1",
+    "@typexs/forms-ng": "^15.0.0-rc1",
+    "@typexs/ng": "^15.0.0-rc1",
     "@typexs/storage": "^3.0.2"
   },
   "publishConfig": {
