--- a/packages/tasks-ng/src/package.json
+++ b/packages/tasks-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/tasks-ng",
-  "version": "14.0.1",
+  "version": "15.0.0-rc1",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -25,14 +25,14 @@
   ],
   "peerDependencies": {
     "@typexs/base": ">=3.0.0",
-    "@typexs/base-ng": ">=14.0.0",
-    "@typexs/forms-ng": ">=14.0.0",
+    "@typexs/base-ng": ">=15.0.0-rc1",
+    "@typexs/forms-ng": ">=15.0.0-rc1",
     "@typexs/server": ">=3.0.0",
-    "@typexs/storage-ng": ">=14.0.0",
+    "@typexs/storage-ng": ">=15.0.0-rc1",
     "@typexs/tasks": ">=3.0.0"
   },
   "dependencies": {
-    "@typexs/base-ng": "^14.0.1"
+    "@typexs/base-ng": "^15.0.0-rc1"
   },
   "devDependencies": {
     "@angular/common": "v15-lts",
@@ -40,8 +40,8 @@
     "@angular/forms": "v15-lts",
     "@angular/router": "v15-lts",
     "@typexs/base": "^3.0.2",
-    "@typexs/base-ng": "^14.0.0",
-    "@typexs/forms-ng": "^14.0.1",
+    "@typexs/base-ng": "^15.0.0-rc1",
+    "@typexs/forms-ng": "^15.0.0-rc1",
     "@typexs/server": "^3.0.2",
     "@typexs/tasks": "^3.0.2",
     "rxjs": "~7.5.0"
