--- a/packages/base-ng/angular.json
+++ b/packages/base-ng/angular.json
@@ -31,7 +31,7 @@
               "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.config.js",
+            "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss"
           }
         }
@@ -39,5 +39,4 @@
     }
   },
   "defaultProject": "base-ng"
-
 }
