--- a/packages/storage-ng/angular.json
+++ b/packages/storage-ng/angular.json
@@ -31,7 +31,7 @@
               "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.config.js",
+            "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss"
           }
         }
