--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,21 +53,6 @@ pages:
         - packages/*/docs/**/*
 
 
-test build:
-  stage: test
-  script:
-    - npm ci
-    - npm run build
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG == null'
-      changes:
-        - .gitlab-ci.yml
-        - package.json
-        - package-lock.json
-        - packages/*/src/**
-        - packages/*/src/**/*
-    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG =~ /^v/'
-
 
 
 
@@ -128,3 +113,23 @@ test:
         - packages/*/test/**/*
         - deployments/testing/**
     - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG =~ /^v/'
+
+
+test build:
+  stage: test
+  script:
+    - npm ci
+    - npm run build
+  needs:
+    - job: test
+      optional: true
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG == null'
+      changes:
+        - .gitlab-ci.yml
+        - package.json
+        - package-lock.json
+        - packages/*/src/**
+        - packages/*/src/**/*
+    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG =~ /^v/'
+
