build: update versions
 - @typexs/auth-ng@15.0.0
 - @typexs/auth@3.0.3
 - @typexs/base-ng@15.0.0
 - @typexs/base@3.0.3
 - @typexs/distributed-storage-ng@15.0.0
 - @typexs/distributed-storage@3.0.3
 - @typexs/entity-ng@15.0.0
 - @typexs/entity@3.0.3
 - @typexs/forms-ng@15.0.0
 - @typexs/forms@3.0.3
 - @typexs/generic@3.0.3
 - @typexs/ldap@3.0.3
 - @typexs/ng-admin-ui@15.0.0
 - @typexs/ng-router-menu@15.0.0
 - @typexs/ng-theme-base@15.0.0
 - @typexs/ng@15.0.0
 - @typexs/notification@3.0.3
 - @typexs/pipelines@3.0.3
 - @typexs/roles@3.0.3
 - @typexs/search-ng@15.0.0
 - @typexs/search@3.0.3
 - @typexs/server@3.0.3
 - @typexs/storage-ng@15.0.0
 - @typexs/storage@3.0.3
 - @typexs/tasks-ng@15.0.0
 - @typexs/tasks@3.0.3
 - @typexs/testing@3.0.3

--- a/packages/distributed-storage-ng/src/package.json
+++ b/packages/distributed-storage-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/distributed-storage-ng",
-  "version": "15.0.0-rc1",
+  "version": "15.0.0",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -43,15 +43,15 @@
     "@typexs/storage-ng": ">=15.0.0-rc1"
   },
   "dependencies": {
-    "@typexs/base-ng": "^15.0.0-rc1",
-    "@typexs/ng-theme-base": "^15.0.0-rc1"
+    "@typexs/base-ng": "^15.0.0",
+    "@typexs/ng-theme-base": "^15.0.0"
   },
   "devDependencies": {
-    "@typexs/base": "^3.0.2",
+    "@typexs/base": "^3.0.3",
     "@typexs/base-ng": "^15.0.0-rc1",
-    "@typexs/distributed-storage": "^3.0.2",
-    "@typexs/forms-ng": "^15.0.0-rc1",
-    "@typexs/ng": "^15.0.0-rc1"
+    "@typexs/distributed-storage": "^3.0.3",
+    "@typexs/forms-ng": "^15.0.0",
+    "@typexs/ng": "^15.0.0"
   },
   "publishConfig": {
     "tag": "v15-lts"
