--- a/packages/base-ng/src/package.json
+++ b/packages/base-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/base-ng",
-  "version": "15.0.0-rc1",
+  "version": "15.0.0",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -41,9 +41,9 @@
     "@typexs/server": ">=3.0.0"
   },
   "devDependencies": {
-    "@typexs/base": "^3.0.2",
-    "@typexs/ng": "^15.0.0-rc1",
-    "@typexs/server": "^3.0.2"
+    "@typexs/base": "^3.0.3",
+    "@typexs/ng": "^15.0.0",
+    "@typexs/server": "^3.0.3"
   },
   "publishConfig": {
     "tag": "v15-lts"
