--- a/packages/ng-admin-ui/src/package.json
+++ b/packages/ng-admin-ui/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/ng-admin-ui",
-  "version": "15.0.0-rc1",
+  "version": "15.0.0",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -45,15 +45,15 @@
     "@typexs/tasks-ng": ">=15.0.0-rc1"
   },
   "devDependencies": {
-    "@typexs/base": "^3.0.2",
-    "@typexs/base-ng": "^15.0.0-rc1",
-    "@typexs/forms-ng": "^15.0.0-rc1",
-    "@typexs/ng": "^15.0.0-rc1",
-    "@typexs/ng-router-menu": "^15.0.0-rc1",
-    "@typexs/ng-theme-base": "^15.0.0-rc1",
-    "@typexs/server": "^3.0.2",
-    "@typexs/storage-ng": "^15.0.0-rc1",
-    "@typexs/tasks-ng": "^15.0.0-rc1",
+    "@typexs/base": "^3.0.3",
+    "@typexs/base-ng": "^15.0.0",
+    "@typexs/forms-ng": "^15.0.0",
+    "@typexs/ng": "^15.0.0",
+    "@typexs/ng-router-menu": "^15.0.0",
+    "@typexs/ng-theme-base": "^15.0.0",
+    "@typexs/server": "^3.0.3",
+    "@typexs/storage-ng": "^15.0.0",
+    "@typexs/tasks-ng": "^15.0.0",
     "rxjs": "~7.5.0"
   },
   "publishConfig": {
