--- a/packages/storage-ng/src/package.json
+++ b/packages/storage-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/storage-ng",
-  "version": "15.0.0-rc1",
+  "version": "15.0.0",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -44,12 +44,12 @@
     "@angular/core": "v15-lts",
     "@angular/forms": "v15-lts",
     "@angular/router": "v15-lts",
-    "@typexs/base": "^3.0.2",
-    "@typexs/base-ng": "^15.0.0-rc1",
-    "@typexs/forms": "^3.0.2",
-    "@typexs/forms-ng": "^15.0.0-rc1",
-    "@typexs/ng": "^15.0.0-rc1",
-    "@typexs/storage": "^3.0.2"
+    "@typexs/base": "^3.0.3",
+    "@typexs/base-ng": "^15.0.0",
+    "@typexs/forms": "^3.0.3",
+    "@typexs/forms-ng": "^15.0.0",
+    "@typexs/ng": "^15.0.0",
+    "@typexs/storage": "^3.0.3"
   },
   "publishConfig": {
     "tag": "v15-lts"
