--- a/package.json
+++ b/package.json
@@ -36,28 +36,28 @@
   ],
   "devDependencies": {
     "@allgemein/http": "~1.4.1",
-    "@angular-devkit/build-angular": "v15-lts",
-    "@angular-devkit/core": "v15-lts",
-    "@angular-devkit/schematics": "v15-lts",
-    "@angular-eslint/eslint-plugin": "~15.2.1",
-    "@angular-eslint/eslint-plugin-template": "~15.2.1",
-    "@angular/animations": "v15-lts",
-    "@angular/cli": "v15-lts",
-    "@angular/common": "v15-lts",
-    "@angular/compiler": "v15-lts",
-    "@angular/compiler-cli": "v15-lts",
-    "@angular/core": "v15-lts",
-    "@angular/forms": "v15-lts",
-    "@angular/language-service": "v15-lts",
-    "@angular/platform-browser": "v15-lts",
-    "@angular/platform-browser-dynamic": "v15-lts",
-    "@angular/router": "v15-lts",
+    "@angular-devkit/build-angular": "v16-lts",
+    "@angular-devkit/core": "v16-lts",
+    "@angular-devkit/schematics": "v16-lts",
+    "@angular-eslint/eslint-plugin": "~16.3.1",
+    "@angular-eslint/eslint-plugin-template": "~16.3.1",
+    "@angular/animations": "v16-lts",
+    "@angular/cli": "v16-lts",
+    "@angular/common": "v16-lts",
+    "@angular/compiler": "v16-lts",
+    "@angular/compiler-cli": "v16-lts",
+    "@angular/core": "v16-lts",
+    "@angular/forms": "v16-lts",
+    "@angular/language-service": "v16-lts",
+    "@angular/platform-browser": "v16-lts",
+    "@angular/platform-browser-dynamic": "v16-lts",
+    "@angular/router": "v16-lts",
     "@antora/cli": "~3.1.9",
     "@antora/lunr-extension": "~1.0.0-alpha.8",
     "@antora/site-generator-default": "~3.1.9",
     "@cezaryrk/minimatch": "3.0.4",
     "@popperjs/core": "~2.11.8",
-    "@schematics/angular": "v15-lts",
+    "@schematics/angular": "v16-lts",
     "@testdeck/mocha": "0.3.3",
     "@types/bcrypt": "~5.0.0",
     "@types/brace-expansion": "~1.1.0",
@@ -79,9 +79,10 @@
     "@types/yargs": "~17.0.32",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
-    "ag-grid-angular": "25.3.0",
-    "ag-grid-community": "25.3.0",
+    "ag-grid-angular": "28.2.1",
+    "ag-grid-community": "28.2.1",
     "animate.css": "4.1.1",
+    "asciidoctor-plantuml": "^1.5.0",
     "body-parser": "1.20.3",
     "bootstrap": "^5.3.3",
     "chai": "4.5.0",
@@ -110,7 +111,7 @@
     "mocha": "11.1.0",
     "mongodb": "3.7.4",
     "mysql": "2.18.1",
-    "ng-packagr": "^15.0.0",
+    "ng-packagr": "^16.0.0-rc1",
     "nodemon": "~2.0.22",
     "nyc": "~17.1.0",
     "perfect-scrollbar": "1.5.1",
@@ -128,14 +129,13 @@
     "through": "2.3.8",
     "ts-node": "~10.9.2",
     "tslib": "^2.3.0",
-    "typescript": "~4.9.5",
-    "zone.js": "~0.11.4"
+    "typescript": "~5.1.3"
   },
   "private": true,
   "typexs": {
     "name": "typexs"
   },
   "overrides": {
-    "rxjs": "~7.5.0"
+    "rxjs": "~7.8.0"
   }
 }
