--- a/packages/ng-admin-ui/src/package.json
+++ b/packages/ng-admin-ui/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/ng-admin-ui",
-  "version": "15.0.0",
+  "version": "16.0.0-rc1",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -31,33 +31,33 @@
   },
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
-    "@angular/common": "v15-lts",
-    "@angular/core": "v15-lts",
-    "@angular/router": "v15-lts",
+    "@angular/common": "v16-lts",
+    "@angular/core": "v16-lts",
+    "@angular/router": "v16-lts",
     "@typexs/base": ">=3.0.0",
-    "@typexs/base-ng": ">=15.0.0-rc1",
-    "@typexs/forms-ng": ">=15.0.0-rc1",
-    "@typexs/ng": ">=15.0.0-rc1",
-    "@typexs/ng-router-menu": ">=15.0.0-rc1",
-    "@typexs/ng-theme-base": ">=15.0.0-rc1",
+    "@typexs/base-ng": ">=16.0.0-rc1",
+    "@typexs/forms-ng": ">=16.0.0-rc1",
+    "@typexs/ng": ">=16.0.0-rc1",
+    "@typexs/ng-router-menu": ">=16.0.0-rc1",
+    "@typexs/ng-theme-base": ">=16.0.0-rc1",
     "@typexs/server": ">=3.0.0",
-    "@typexs/storage-ng": ">=15.0.0-rc1",
-    "@typexs/tasks-ng": ">=15.0.0-rc1"
+    "@typexs/storage-ng": ">=16.0.0-rc1",
+    "@typexs/tasks-ng": ">=16.0.0-rc1"
   },
   "devDependencies": {
     "@typexs/base": "^3.0.3",
-    "@typexs/base-ng": "^15.0.0",
-    "@typexs/forms-ng": "^15.0.0",
-    "@typexs/ng": "^15.0.0",
-    "@typexs/ng-router-menu": "^15.0.0",
-    "@typexs/ng-theme-base": "^15.0.0",
+    "@typexs/base-ng": "^16.0.0-rc1",
+    "@typexs/forms-ng": "^16.0.0-rc1",
+    "@typexs/ng": "^16.0.0-rc1",
+    "@typexs/ng-router-menu": "^16.0.0-rc1",
+    "@typexs/ng-theme-base": "^16.0.0-rc1",
     "@typexs/server": "^3.0.3",
-    "@typexs/storage-ng": "^15.0.0",
-    "@typexs/tasks-ng": "^15.0.0",
-    "rxjs": "~7.5.0"
+    "@typexs/storage-ng": "^16.0.0-rc1",
+    "@typexs/tasks-ng": "^16.0.0-rc1",
+    "rxjs": "~7.8.0"
   },
   "publishConfig": {
-    "tag": "v15-lts"
+    "tag": "v16-lts"
   },
   "gitHead": "a845caa5b33bf3e91c285565671b774d1f61fa4a"
 }
