--- a/packages/tasks-ng/src/package.json
+++ b/packages/tasks-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/tasks-ng",
-  "version": "15.0.0",
+  "version": "16.0.0-rc1",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -25,29 +25,29 @@
   ],
   "peerDependencies": {
     "@typexs/base": ">=3.0.0",
-    "@typexs/base-ng": ">=15.0.0-rc1",
-    "@typexs/forms-ng": ">=15.0.0-rc1",
+    "@typexs/base-ng": ">=16.0.0-rc1",
+    "@typexs/forms-ng": ">=16.0.0-rc1",
     "@typexs/server": ">=3.0.0",
-    "@typexs/storage-ng": ">=15.0.0-rc1",
+    "@typexs/storage-ng": ">=16.0.0-rc1",
     "@typexs/tasks": ">=3.0.0"
   },
   "dependencies": {
-    "@typexs/base-ng": "^15.0.0"
+    "@typexs/base-ng": "^16.0.0-rc1"
   },
   "devDependencies": {
-    "@angular/common": "v15-lts",
-    "@angular/core": "v15-lts",
-    "@angular/forms": "v15-lts",
-    "@angular/router": "v15-lts",
+    "@angular/common": "v16-lts",
+    "@angular/core": "v16-lts",
+    "@angular/forms": "v16-lts",
+    "@angular/router": "v16-lts",
     "@typexs/base": "^3.0.3",
-    "@typexs/base-ng": "^15.0.0-rc1",
-    "@typexs/forms-ng": "^15.0.0",
+    "@typexs/base-ng": "^16.0.0-rc1",
+    "@typexs/forms-ng": "^16.0.0-rc1",
     "@typexs/server": "^3.0.3",
     "@typexs/tasks": "^3.0.3",
-    "rxjs": "~7.5.0"
+    "rxjs": "~7.8.0"
   },
   "publishConfig": {
-    "tag": "v15-lts"
+    "tag": "v16-lts"
   },
   "gitHead": "a845caa5b33bf3e91c285565671b774d1f61fa4a"
 }
