--- a/package.json
+++ b/package.json
@@ -36,42 +36,41 @@
   ],
   "devDependencies": {
     "@allgemein/http": "~1.4.1",
-    "@angular-devkit/build-angular": "v16-lts",
-    "@angular-devkit/core": "v16-lts",
-    "@angular-devkit/schematics": "v16-lts",
-    "@angular-eslint/eslint-plugin": "~16.3.1",
-    "@angular-eslint/eslint-plugin-template": "~16.3.1",
-    "@angular/animations": "v16-lts",
-    "@angular/cli": "v16-lts",
-    "@angular/common": "v16-lts",
-    "@angular/compiler": "v16-lts",
-    "@angular/compiler-cli": "v16-lts",
-    "@angular/core": "v16-lts",
-    "@angular/forms": "v16-lts",
-    "@angular/language-service": "v16-lts",
-    "@angular/platform-browser": "v16-lts",
-    "@angular/platform-browser-dynamic": "v16-lts",
-    "@angular/router": "v16-lts",
+    "@angular-devkit/build-angular": "v17-lts",
+    "@angular-devkit/core": "v17-lts",
+    "@angular-devkit/schematics": "v17-lts",
+    "@angular-eslint/eslint-plugin": "~17.5.3",
+    "@angular-eslint/eslint-plugin-template": "~17.5.3",
+    "@angular/animations": "v17-lts",
+    "@angular/cli": "v17-lts",
+    "@angular/common": "v17-lts",
+    "@angular/compiler": "v17-lts",
+    "@angular/compiler-cli": "v17-lts",
+    "@angular/core": "v17-lts",
+    "@angular/forms": "v17-lts",
+    "@angular/language-service": "v17-lts",
+    "@angular/platform-browser": "v17-lts",
+    "@angular/platform-browser-dynamic": "v17-lts",
+    "@angular/router": "v17-lts",
     "@antora/cli": "~3.1.9",
     "@antora/lunr-extension": "~1.0.0-alpha.8",
     "@antora/site-generator-default": "~3.1.9",
     "@cezaryrk/minimatch": "3.0.4",
     "@popperjs/core": "~2.11.8",
-    "@schematics/angular": "v16-lts",
+    "@schematics/angular": "v17-lts",
     "@testdeck/mocha": "0.3.3",
     "@types/bcrypt": "~5.0.0",
     "@types/brace-expansion": "~1.1.0",
-    "@types/chai": "~4.3.4",
-    "@types/chai-spies": "~1.0.3",
+    "@types/chai": "~5.0.1",
+    "@types/chai-spies": "~1.0.6",
     "@types/d3": "~7.4.0",
     "@types/express": "~4.17.14",
-    "@types/fs-extra": "~9.0.13",
-    "@types/glob": "~7.2.0",
+    "@types/glob": "~8.1.0",
     "@types/got": "~9.6.12",
     "@types/jasmine": "~5.1.5",
     "@types/luxon": "~2.4.0",
     "@types/mocha": "~9.1.1",
-    "@types/node": "ts4.9",
+    "@types/node": "ts5.2",
     "@types/sha1": "~1.1.5",
     "@types/supertest": "~6.0.2",
     "@types/through2": "~2.0.41",
@@ -92,11 +91,10 @@
     "cron-parser": "4.9.0",
     "d3": "6.7.0",
     "eslint": "~8.57.1",
-    "eslint-plugin-jasmine": "~4.2.0",
+    "eslint-plugin-jasmine": "~4.2.2",
     "eslint-plugin-mocha": "~10.5.0",
-    "eslint-plugin-prettier": "~5.2.1",
+    "eslint-plugin-prettier": "~5.2.3",
     "express": "4.21.2",
-    "fs-extra": "8.1.0",
     "got": "version-11",
     "jasmine-core": "^5.2.0",
     "js-yaml": "4.1.0",
@@ -111,8 +109,8 @@
     "mocha": "11.1.0",
     "mongodb": "3.7.4",
     "mysql": "2.18.1",
-    "ng-packagr": "^16.0.0-rc1",
-    "nodemon": "~2.0.22",
+    "ng-packagr": "^17.0.0",
+    "nodemon": "~3.1.9",
     "nyc": "~17.1.0",
     "perfect-scrollbar": "1.5.1",
     "pg": "8.13.1",
@@ -129,7 +127,7 @@
     "through": "2.3.8",
     "ts-node": "~10.9.2",
     "tslib": "^2.3.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.4.5"
   },
   "private": true,
   "typexs": {
