--- a/packages/base/src/package.json
+++ b/packages/base/src/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "node ../../../scripts/build.js",
     "clean": "npm run clean:build && npm run clean:modules",
-    "clean:build": "rm -rf ../build",
-    "clean:modules": "rm -rf node_modules ../node_modules",
+    "clean:build": "node ../../../scripts/clean.js build",
+    "clean:modules": "node ../../../scripts/clean.js modules",
     "test": "nyc mocha ../test/{**,**/**,**/**/**}/*.spec.ts",
     "posttest": "nyc report --reporter=json"
   },
