--- a/packages/ng-router-menu/src/package.json
+++ b/packages/ng-router-menu/src/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@typexs/ng-router-menu",
-  "version": "16.0.0-rc1",
+  "version": "17.0.0-rc1",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
     "clean": "npm run clean:build && npm run clean:modules",
-    "clean:build": "rm -rf ../build",
-    "clean:modules": "rm -rf node_modules ../node_modules ../.angular",
+    "clean:build": "node ../../../scripts/clean.js build",
+    "clean:modules": "node ../../../scripts/clean.js modules",
     "test": "ng test --code-coverage=true --watch=false",
     "build": "ng build"
   },
@@ -31,21 +31,21 @@
   },
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
-    "@angular/common": "v16-lts",
-    "@angular/core": "v16-lts",
-    "@angular/platform-browser": "v16-lts",
-    "@angular/router": "v16-lts",
+    "@angular/common": "v17-lts",
+    "@angular/core": "v17-lts",
+    "@angular/platform-browser": "v17-lts",
+    "@angular/router": "v17-lts",
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
-    "@angular/common": "v16-lts",
-    "@angular/core": "v16-lts",
-    "@angular/platform-browser": "v16-lts",
-    "@angular/router": "v16-lts",
+    "@angular/common": "v17-lts",
+    "@angular/core": "v17-lts",
+    "@angular/platform-browser": "v17-lts",
+    "@angular/router": "v17-lts",
     "rxjs": "~7.8.0"
   },
   "publishConfig": {
-    "tag": "v16-lts"
+    "tag": "v17-lts"
   },
   "gitHead": "a845caa5b33bf3e91c285565671b774d1f61fa4a"
 }
