--- a/packages/ng-theme-base/src/package.json
+++ b/packages/ng-theme-base/src/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@typexs/ng-theme-base",
-  "version": "16.0.0-rc1",
+  "version": "17.0.0-rc1",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
     "clean": "npm run clean:build && npm run clean:modules",
-    "clean:build": "rm -rf ../build",
-    "clean:modules": "rm -rf node_modules ../node_modules ../.angular",
+    "clean:build": "node ../../../scripts/clean.js build",
+    "clean:modules": "node ../../../scripts/clean.js modules",
     "test": "ng test --code-coverage=true --watch=false",
     "build": "ng build"
   },
@@ -32,22 +32,22 @@
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "^5.0.0",
-    "@typexs/ng-router-menu": ">=16.0.0-rc1",
+    "@typexs/ng-router-menu": ">=17.0.0-rc1",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.0",
     "perfect-scrollbar": "^1.5.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.0.0",
-    "@typexs/base-ng": "^16.0.0-rc1",
-    "@typexs/forms-ng": "^16.0.0-rc1",
-    "@typexs/ng-router-menu": "^16.0.0-rc1",
+    "@typexs/base-ng": "^17.0.0-rc1",
+    "@typexs/forms-ng": "^17.0.0-rc1",
+    "@typexs/ng-router-menu": "^17.0.0-rc1",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.1",
     "perfect-scrollbar": "^1.5.1"
   },
   "publishConfig": {
-    "tag": "v16-lts"
+    "tag": "v17-lts"
   },
   "exports": {
     "./styles/theme-admin": {
