build: update versions
 - @typexs/auth-ng@17.0.0
 - @typexs/auth@3.0.4
 - @typexs/base-ng@17.0.0
 - @typexs/base@3.0.4
 - @typexs/distributed-storage-ng@17.0.0
 - @typexs/distributed-storage@3.0.4
 - @typexs/entity-ng@17.0.0
 - @typexs/entity@3.0.4
 - @typexs/forms-ng@17.0.0
 - @typexs/forms@3.0.4
 - @typexs/generic@3.0.4
 - @typexs/ldap@3.0.4
 - @typexs/ng-admin-ui@17.0.0
 - @typexs/ng-router-menu@17.0.0
 - @typexs/ng-theme-base@17.0.0
 - @typexs/ng@17.0.0
 - @typexs/notification@3.0.4
 - @typexs/pipelines@3.0.4
 - @typexs/roles-api@3.0.2
 - @typexs/roles@3.0.4
 - @typexs/search-ng@17.0.0
 - @typexs/search@3.0.4
 - @typexs/server@3.0.4
 - @typexs/storage-ng@17.0.0
 - @typexs/storage@3.0.4
 - @typexs/tasks-ng@17.0.0
 - @typexs/tasks@3.0.4
 - @typexs/testing@3.0.4

--- a/packages/base-ng/src/package.json
+++ b/packages/base-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/base-ng",
-  "version": "17.0.0-rc1",
+  "version": "17.0.0",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -41,9 +41,9 @@
     "@typexs/server": ">=3.0.0"
   },
   "devDependencies": {
-    "@typexs/base": "^3.0.3",
-    "@typexs/ng": "^17.0.0-rc1",
-    "@typexs/server": "^3.0.3"
+    "@typexs/base": "^3.0.4",
+    "@typexs/ng": "^17.0.0",
+    "@typexs/server": "^3.0.4"
   },
   "publishConfig": {
     "tag": "v17-lts"
