--- a/packages/auth-ng/src/package.json
+++ b/packages/auth-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/auth-ng",
-  "version": "17.0.0-rc1",
+  "version": "17.0.0",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -46,19 +46,19 @@
     "@typexs/roles-api": ">=3.0.0"
   },
   "dependencies": {
-    "@typexs/base-ng": "^17.0.0-rc1",
-    "@typexs/ng-theme-base": "^17.0.0-rc1"
+    "@typexs/base-ng": "^17.0.0",
+    "@typexs/ng-theme-base": "^17.0.0"
   },
   "devDependencies": {
-    "@typexs/auth": "^3.0.3",
+    "@typexs/auth": "^3.0.4",
     "@typexs/base-ng": "^17.0.0-rc1",
-    "@typexs/entity-ng": "^17.0.0-rc1",
-    "@typexs/forms-ng": "^17.0.0-rc1",
-    "@typexs/ng": "^17.0.0-rc1",
+    "@typexs/entity-ng": "^17.0.0",
+    "@typexs/forms-ng": "^17.0.0",
+    "@typexs/ng": "^17.0.0",
     "@typexs/ng-theme-base": "^17.0.0-rc1",
-    "@typexs/roles": "^3.0.3",
-    "@typexs/roles-api": "^3.0.1",
-    "@typexs/server": "^3.0.3"
+    "@typexs/roles": "^3.0.4",
+    "@typexs/roles-api": "^3.0.2",
+    "@typexs/server": "^3.0.4"
   },
   "publishConfig": {
     "tag": "v17-lts"
