--- a/packages/search-ng/src/package.json
+++ b/packages/search-ng/src/package.json
@@ -28,20 +28,20 @@
     "@angular/core": "v17-lts",
     "@angular/forms": "v17-lts",
     "@angular/router": "v17-lts",
-    "@typexs/base-ng": ">=17.0.0-rc1",
-    "@typexs/forms-ng": ">=17.0.0-rc1",
-    "@typexs/ng-theme-base": ">=17.0.0-rc1",
+    "@typexs/base-ng": ">=17.0.0",
+    "@typexs/forms-ng": ">=17.0.0",
+    "@typexs/ng-theme-base": ">=17.0.0",
     "@typexs/search": ">=3.0.0",
-    "@typexs/storage-ng": ">=17.0.0-rc1"
+    "@typexs/storage-ng": ">=17.0.0"
   },
   "dependencies": {
     "@typexs/base-ng": "^17.0.0",
     "@typexs/ng-theme-base": "^17.0.0"
   },
   "devDependencies": {
-    "@typexs/base-ng": "^17.0.0-rc1",
+    "@typexs/base-ng": "^17.0.0",
     "@typexs/forms-ng": "^17.0.0",
-    "@typexs/ng-theme-base": ">=17.0.0-rc1",
+    "@typexs/ng-theme-base": ">=17.0.0",
     "@typexs/search": "^3.0.4",
     "@typexs/storage-ng": "^17.0.0"
   },
