--- a/packages/auth-ng/src/package.json
+++ b/packages/auth-ng/src/package.json
@@ -37,12 +37,12 @@
     "@angular/forms": "v17-lts",
     "@angular/router": "v17-lts",
     "@typexs/auth": ">=3.0.0",
-    "@typexs/base-ng": ">=17.0.0-rc1",
-    "@typexs/entity-ng": ">=17.0.0-rc1",
-    "@typexs/forms-ng": ">=17.0.0-rc1",
+    "@typexs/base-ng": ">=17.0.0",
+    "@typexs/entity-ng": ">=17.0.0",
+    "@typexs/forms-ng": ">=17.0.0",
     "@typexs/generic": ">=3.0.0",
-    "@typexs/ng": ">=17.0.0-rc1",
-    "@typexs/ng-theme-base": ">=17.0.0-rc1",
+    "@typexs/ng": ">=17.0.0",
+    "@typexs/ng-theme-base": ">=17.0.0",
     "@typexs/roles-api": ">=3.0.0"
   },
   "dependencies": {
@@ -51,11 +51,11 @@
   },
   "devDependencies": {
     "@typexs/auth": "^3.0.4",
-    "@typexs/base-ng": "^17.0.0-rc1",
+    "@typexs/base-ng": "^17.0.0",
     "@typexs/entity-ng": "^17.0.0",
     "@typexs/forms-ng": "^17.0.0",
     "@typexs/ng": "^17.0.0",
-    "@typexs/ng-theme-base": "^17.0.0-rc1",
+    "@typexs/ng-theme-base": "^17.0.0",
     "@typexs/roles": "^3.0.4",
     "@typexs/roles-api": "^3.0.2",
     "@typexs/server": "^3.0.4"
