--- a/packages/base-ng/src/package.json
+++ b/packages/base-ng/src/package.json
@@ -37,7 +37,7 @@
     "@angular/forms": "v17-lts",
     "@angular/router": "v17-lts",
     "@typexs/base": ">=3.0.0",
-    "@typexs/ng": ">=17.0.0-rc1",
+    "@typexs/ng": ">=17.0.0",
     "@typexs/server": ">=3.0.0"
   },
   "devDependencies": {
