--- a/packages/ng-admin-ui/src/package.json
+++ b/packages/ng-admin-ui/src/package.json
@@ -35,14 +35,14 @@
     "@angular/core": "v17-lts",
     "@angular/router": "v17-lts",
     "@typexs/base": ">=3.0.0",
-    "@typexs/base-ng": ">=17.0.0-rc1",
-    "@typexs/forms-ng": ">=17.0.0-rc1",
-    "@typexs/ng": ">=17.0.0-rc1",
-    "@typexs/ng-router-menu": ">=17.0.0-rc1",
-    "@typexs/ng-theme-base": ">=17.0.0-rc1",
+    "@typexs/base-ng": ">=17.0.0",
+    "@typexs/forms-ng": ">=17.0.0",
+    "@typexs/ng": ">=17.0.0",
+    "@typexs/ng-router-menu": ">=17.0.0",
+    "@typexs/ng-theme-base": ">=17.0.0",
     "@typexs/server": ">=3.0.0",
-    "@typexs/storage-ng": ">=17.0.0-rc1",
-    "@typexs/tasks-ng": ">=17.0.0-rc1"
+    "@typexs/storage-ng": ">=17.0.0",
+    "@typexs/tasks-ng": ">=17.0.0"
   },
   "devDependencies": {
     "@typexs/base": "^3.0.4",
