--- a/packages/ng-theme-base/src/package.json
+++ b/packages/ng-theme-base/src/package.json
@@ -32,7 +32,7 @@
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "^5.0.0",
-    "@typexs/ng-router-menu": ">=17.0.0-rc1",
+    "@typexs/ng-router-menu": ">=17.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.0",
     "perfect-scrollbar": "^1.5.1"
