--- a/packages/storage-ng/src/package.json
+++ b/packages/storage-ng/src/package.json
@@ -33,10 +33,10 @@
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
     "@typexs/base": ">=3.0.0",
-    "@typexs/base-ng": ">=17.0.0-rc1",
+    "@typexs/base-ng": ">=17.0.0",
     "@typexs/forms": ">=3.0.0",
-    "@typexs/forms-ng": ">=17.0.0-rc1",
-    "@typexs/ng": ">=17.0.0-rc1",
+    "@typexs/forms-ng": ">=17.0.0",
+    "@typexs/ng": ">=17.0.0",
     "@typexs/storage": ">=3.0.0"
   },
   "devDependencies": {
