--- a/packages/tasks-ng/src/package.json
+++ b/packages/tasks-ng/src/package.json
@@ -25,10 +25,10 @@
   ],
   "peerDependencies": {
     "@typexs/base": ">=3.0.0",
-    "@typexs/base-ng": ">=17.0.0-rc1",
-    "@typexs/forms-ng": ">=17.0.0-rc1",
+    "@typexs/base-ng": ">=17.0.0",
+    "@typexs/forms-ng": ">=17.0.0",
     "@typexs/server": ">=3.0.0",
-    "@typexs/storage-ng": ">=17.0.0-rc1",
+    "@typexs/storage-ng": ">=17.0.0",
     "@typexs/tasks": ">=3.0.0"
   },
   "dependencies": {
@@ -40,7 +40,7 @@
     "@angular/forms": "v17-lts",
     "@angular/router": "v17-lts",
     "@typexs/base": "^3.0.4",
-    "@typexs/base-ng": "^17.0.0-rc1",
+    "@typexs/base-ng": "^17.0.0",
     "@typexs/forms-ng": "^17.0.0",
     "@typexs/server": "^3.0.4",
     "@typexs/tasks": "^3.0.4",
